<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Country Flags?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level">LevelActivity</string>

    <string name="guessit">" Guess It! "</string>
    <string name="tap_to_play">Tap to Play</string>

    <string name="back">&lt;</string>
    <string name="question_mark">"?"</string>

    <string name="congrats_message">Congratulations!</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>

    <string name="settings_title">Settings</string>
    <string name="settings_reset">Reset progress</string>
    <string name="settings_reset_confirm">Do you really want to reset your game progress?</string>

    <string name="alert_congratulations">Congratulations</string>
    <string name="alert_correct_answer">"You've guessed the correct answer!"</string>
    <string name="alert_answer_was">The answer was</string>

    <string name="help_skip_level">Skip level</string>
    <string name="help_eliminate_wrong_letter">Eliminate wrong letter</string>
    <string name="help_place_correct_letter">Place correct letter</string>

    <string name="game_over">GAME OVER</string>
    <string name="game_over_congratulations">" Congratulations! "</string>
    <string name="game_over_description">"You've finished it!"</string>
    <string name="game_over_reset_progress">Visit settings to restart the game</string>

    <string name="game_over_liked_guessit">Have you liked it?</string>
    <string name="game_over_other_games">Play all the other games!</string>
    <string name="game_over_visit_website">Visit our website</string>
    <string name="game_over_website">http://guessit.mobi</string>

    <string name="game_over_credits">Credits</string>
    <string name="game_over_thank_your">Thank You!</string>
    <string name="game_over_development">Development</string>
    <string name="game_over_game_design">Game Design</string>
    <string name="game_over_level_design">Level Design</string>
    <string name="game_over_beta_tester">Beta Test</string>
    <string name="game_over_other">Other</string>
    <string name="game_over_marlon">Marlon Andrade</string>
    <string name="game_over_rosiene">Rosiene Dilly</string>
    <string name="game_over_maurilio">Maurílio Andrade</string>
    <string name="game_over_david">David Yagi</string>
    <string name="game_over_fabim">Fábio Nogueira</string>
    <string name="game_over_iuri">Iuri Matos</string>
    <string name="game_over_victor">Victor Hugo</string>
    <string name="game_over_alexssandro">Alexssandro A. Reis</string>

    <string name="img_001">afghanistan</string>
    <string name="img_002">albania</string>
    <string name="img_003">algeria</string>
    <string name="img_004">angola</string>
    <string name="img_005">australia</string>
    <string name="img_006">bahrain</string>
    <string name="img_007">belgium</string>
    <string name="img_008">bolivia</string>
    <string name="img_009">brazil</string>
    <string name="img_010">bulgaria</string>
    <string name="img_011">cameroon</string>
    <string name="img_012">canada</string>
    <string name="img_013">canary islands</string>
    <string name="img_014">chile</string>
    <string name="img_015">colombia</string>
    <string name="img_016">croatia</string>
    <string name="img_017">cuba</string>
    <string name="img_018">denmark</string>
    <string name="img_019">ecuador</string>
    <string name="img_020">egypt</string>
    <string name="img_021">england</string>
    <string name="img_022">finland</string>
    <string name="img_023">france</string>
    <string name="img_024">germany</string>
    <string name="img_025">ghana</string>
    <string name="img_026">greece</string>
    <string name="img_027">guatemala</string>
    <string name="img_028">hong kong</string>
    <string name="img_029">hungary</string>
    <string name="img_030">iceland</string>
    <string name="img_031">india</string>
    <string name="img_032">iran</string>
    <string name="img_033">iraq</string>
    <string name="img_034">ireland</string>
    <string name="img_035">israel</string>
    <string name="img_036">italy</string>
    <string name="img_037">jamaica</string>
    <string name="img_038">japan</string>
    <string name="img_039">kazakhstan</string>
    <string name="img_040">luxembourg</string>
    <string name="img_041">malaysia</string>
    <string name="img_042">mexico</string>
    <string name="img_043">montenegro</string>
    <string name="img_044">morocco</string>
    <string name="img_045">netherlands</string>
    <string name="img_046">new zealand</string>
    <string name="img_047">nigeria</string>
    <string name="img_048">north korea</string>
    <string name="img_049">norway</string>
    <string name="img_050">panama</string>
    <string name="img_051">peru</string>
    <string name="img_052">portugal</string>
    <string name="img_053">puerto rico</string>
    <string name="img_054">romania</string>
    <string name="img_055">russia</string>
    <string name="img_056">saudi arabia</string>
    <string name="img_057">scotland</string>
    <string name="img_058">serbia</string>
    <string name="img_059">singapore</string>
    <string name="img_060">slovakia</string>
    <string name="img_061">south africa</string>
    <string name="img_062">south korea</string>
    <string name="img_063">spain</string>
    <string name="img_064">sweden</string>
    <string name="img_065">switzerland</string>
    <string name="img_066">taiwan</string>
    <string name="img_067">tunisia</string>
    <string name="img_068">united kingdom</string>
    <string name="img_069">ukraine</string>
    <string name="img_070">united states</string>
    <string name="img_071">uruguay</string>
    <string name="img_072">wales</string>
    <string name="img_073">zimbabwe</string>
    <string name="img_guessit_final">Guess It</string>

</resources>
