<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:guessit="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

    <mobi.guessit.framework.view.components.FontFaceButton
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:id="@+id/action_bar_back_button"
        android:layout_alignParentLeft="true"
        android:paddingRight="56dp"
        android:text="@string/back"
        android:background="@android:color/transparent"
        guessit:fontFace="EuphemiaUCAS.ttf"
        android:textSize="24sp"
        />

    <mobi.guessit.framework.view.components.FontFaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/action_bar_guessit_text_view"
        android:text="@string/guessit"
        guessit:fontFace="Lobster.ttf"
        android:textSize="32sp" />

    <mobi.guessit.framework.view.components.FontFaceButton
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:id="@+id/action_bar_settings_button"
        android:layout_alignParentRight="true"
        android:paddingLeft="50dp"
        android:text="@string/question_mark"
        android:background="@android:color/transparent"
        guessit:fontFace="JotiOne-Regular.ttf"
        android:textSize="32sp"
        />

</RelativeLayout>